# poetry-demo

./: .gitignore  .pre-commit-config.yaml  .pre-commit.config.yaml  README.md  pyproject.toml  setup.cfg  testfile.py
examples/sklearn_elasticnet_wine/: train.py
examples/time_series_model/: conda.yaml
src/: hello_world.py
