[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.9"
pendulum = "^2.1.2"
pandas = "^1.5.0"
scikit-learn = "^1.1.2"
mlflow = "^1.29.0"
notebook = "^6.5.1"
psycopg2 = "^2.9.4"
numpy = "^1.23.4"
pre-commit = "^2.20.0"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
autoflake = "^1.7.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
